# Deepseek2API-py

./: .gitignore  Dockerfile  README.md  example.config.json  pyproject.toml  test.py
.github/workflows/: docker-publish.yml
examples/: basic_chat.py
scripts/: generate_rap.py  run_chat.ps1
src/deepseek_client/: __init__.py  cli.py  config.py  constants.py  exceptions.py  network.py  openai.py  pow.py
tests/: test_openai_api.py
