[project]
name = "deepseek2api2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.5",
    "curl-cffi>=0.14.0",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.40.0",
    "wasmtime>=41.0.0",
]

[project.scripts]
deepseek-client = "deepseek_client.cli:main"
